# data-pipeline-with-apache-kafka

./: .gitignore  Kafka + Spark Demo.ipynb  LICENSE  README.md  demo-step-by-step.md  experiment.sh  host-metrics-collector.sh  plots.py  presentation.md  pyproject.toml  startup-zookeeper-kafka.sh
producer/: Dockerfile  README.md  app.py  deployment.yaml  pyproject.toml  teste.py
spark-ml-training/: Apache_Spark_Examples.ipynb  ML Training.ipynb  README.md  Spark ML Training.ipynb  Spark Streaming Application.ipynb  Spark Streaming Fake App.ipynb  Spark on K8s.ipynb  pyproject.toml
spark-ml-training/model/spark-logistic-regression-model/metadata/: .part-00000.crc  part-00000
spark-ml-training/model/spark-logistic-regression-model/stages/00_StringIndexer_4b03db55f544/metadata/: .part-00000.crc  part-00000
spark-ml-training/model/spark-logistic-regression-model/stages/00_StringIndexer_76f4938f923d/metadata/: .part-00000.crc  part-00000
spark-ml-training/model/spark-logistic-regression-model/stages/00_StringIndexer_cbb0a33fdb25/data/: .part-00000-673dd2ab-f3c1-4b24-a642-27a4187352df-c000.snappy.parquet.crc  part-00000-673dd2ab-f3c1-4b24-a642-27a4187352df-c000.snappy.parquet
spark-ml-training/model/spark-logistic-regression-model/stages/00_StringIndexer_cbb0a33fdb25/metadata/: .part-00000.crc  part-00000
spark-ml-training/model/spark-logistic-regression-model/stages/01_StringIndexer_94840e0f0a21/metadata/: .part-00000.crc  part-00000
spark-ml-training/model/spark-logistic-regression-model/stages/01_StringIndexer_e0ca60328887/metadata/: .part-00000.crc  (+1 more)
(+118 files in other folders)
