[tool.poetry]
name = "data-pipelines-with-apache-kafka"
version = "0.1.0"
description = ""
authors = ["Carlos Henrique <carloshkayser@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
kafka-python = "^2.0.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
