[tool.poetry]
name = "producer"
version = "0.1.0"
description = ""
authors = ["Carlos Henrique <carloshkayser@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
kafka-python = "2.0.2"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
